--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=todoapp
+
+# MySQL Database Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/todoappdb
+spring.datasource.username=root
+spring.datasource.password=""
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# spring.application.name=start
+# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.url=jdbc:postgresql://crossover.proxy.rlwy.net:55098/railway?sslmode=require
+# spring.datasource.username=postgres
+# spring.datasource.password=VwyPfkaGowAxJRwCXWtKAEZTUhYusYYj
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.jdbc.time_zone=UTC
