--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=todoapp
 # MySQL Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/todoappdb
 spring.datasource.username=root
-spring.datasource.password=""
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
