--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=todoapp
 
 # MySQL Database Connection
-spring.datasource.url=jdbc:mysql://root:pppupdIXmMjwkzxOUbMylkSIGYZGXZYn@mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=pppupdIXmMjwkzxOUbMylkSIGYZGXZYn
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
