--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # basic user authentication
-spring.security.user.name=admin
-spring.security.user.password=admin
+# spring.security.user.name=admin
+# spring.security.user.password=admin
 
 # spring.application.name=start
 # spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
